--- a/index.html
+++ b/index.html
@@ -7,4 +7,74 @@
         <link href="https://font.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="./styles.css" rel="stylesheet">
     </head>
+    <body>
+        <div class="overlay" id="overlay"></div>
+        <div class="game-ovr" id="gameOver">
+            <h2 id="goTxt"></h2>
+            <button onclick="resetGame()">New game</button>
+        </div>
+        <div class="gametainer">
+            <div class="sidebar-l">
+                <div class="game-meta">
+                    <div class="game-meta-tl">
+                        <span class="material-icons">settings</span>
+                        <span class="game-type">Casual • <a href="#">Correspondence</a></span>
+                    </div>
+                    <div class="game-time">right now</div>
+                </div>
+                <div class="player-card" id="blackPlr">
+                    <div class="p-dot black"></div>
+                    <div class="player-name">Level 1</div>
+                </div>
+                <div class="player-card" id="whitePlr">
+                    <div class="p-dot white"></div>
+                    <div class="player-name">Anonymous</div>
+                </div>
+            </div>
+            <div class="board-wpr">
+                <div class="board" id="board"></div>
+            </div>
+            <div class="r-sidebar">
+                <div class="opponent-hd">
+                    <div class="stat-dot"></div>
+                    <div>Level 1</div> <!-- implement sm like lichesses stockfish-->
+                </div>
+                <div class="moves-pnl">
+                    <div class="move-ctrls">
+                        <button onclick="flipBoard()" title="Flip board">
+                            <span class="material-icons">sync_alt</span>
+                        </button>
+                        <div class="spacer"></div>
+                        <button onclick="firstMove()" title="First move">
+                            <span class="material-icons">first_page</span>
+                        </button>
+                        <button onclick="prevMove()" title="Previous move">
+                            <span class="material-icons">chevron_left</span>
+                        </button>
+                        <button onclick="nextMove()" title="Next move">
+                            <span class="material-icons">chevron_right</span>
+                        </button>
+                        <button onclick="lastMove()" title="Last move">
+                            <span class="material-icons">last_page</span>
+                        </button>
+                        <button title="Menu">
+                            <span class="material-icons">menu</span>
+                        </button>
+                    </div>
+                    <div class="moves-ls" id="movesLs"></div>
+                    <div class="bottom-ctrls">
+                        <button onclick="resign()">
+                            <span class="material-icons">close</span> <!-- haha noob! you're resigning!! /j /j-->
+                        </button>
+                        <button onclick="offerDraw()">½</button>
+                        <button>
+                            <span class="material-icons">flag</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="turn-indicator" id="turnInd">Your turn</div>
+            </div>
+        </div>
+    </body>
+    <script src="./script.js"></script>
 </html>
