created script.js, now theres an actual game!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>grid</title>
-        <link href="https://font.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         <link href="./styles.css" rel="stylesheet">
     </head>
     <body>
@@ -24,11 +24,11 @@
                 </div>
                 <div class="player-card" id="blackPlr">
                     <div class="p-dot black"></div>
-                    <div class="player-name">Level 1</div>
+                    <div class="p-name">Level 1</div>
                 </div>
                 <div class="player-card" id="whitePlr">
                     <div class="p-dot white"></div>
-                    <div class="player-name">Anonymous</div>
+                    <div class="p-name">Anonymous</div>
                 </div>
             </div>
             <div class="board-wpr">
@@ -76,5 +76,5 @@
             </div>
         </div>
     </body>
-    <script src="./script.js"></script>
+    <script src="./scripts.js"></script>
 </html>
