--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             <h2 id="goTxt"></h2>
             <button onclick="resetGame()">New game</button>
         </div>
+        <div class="promo-dialog" id="promoDialog">
+            <h3>Promote your pawn to:</h3>
+            <div class="promo-options">
+                <div class="promo-piece" id="promoteQ" onclick="promotePawn('Q')"></div>
+                <div class="promo-piece" id="promoteR" onclick="promotePawn('R')"></div>
+                <div class="promo-piece" id="promoteB" onclick="promotePawn('B')"></div>
+                <div class="promo-piece" id="promoteN" onclick="promotePawn('N')"></div>
+            </div>
+        </div>
         <div class="gametainer">
             <div class="sidebar-l">
                 <div class="game-meta">
@@ -24,7 +33,7 @@
                 </div>
                 <div class="player-card" id="blackPlr">
                     <div class="p-dot black"></div>
-                    <div class="p-name">Level 1</div>
+                    <div class="p-name">Anonymous</div>
                 </div>
                 <div class="player-card" id="whitePlr">
                     <div class="p-dot white"></div>
@@ -37,7 +46,7 @@
             <div class="r-sidebar">
                 <div class="opponent-hd">
                     <div class="stat-dot"></div>
-                    <div>Level 1</div> <!-- implement sm like lichesses stockfish-->
+                    <div>Anonymous</div> <!-- implement sm like lichesses stockfish-->
                 </div>
                 <div class="moves-pnl">
                     <div class="move-ctrls">
@@ -67,7 +76,7 @@
                             <span class="material-icons">close</span> <!-- haha noob! you're resigning!! /j /j-->
                         </button>
                         <button onclick="offerDraw()">½</button>
-                        <button>
+                        <button onclick="claimTimeout()">
                             <span class="material-icons">flag</span>
                         </button>
                     </div>
